change from "amount" to "amount2"

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ yepnope({
            cuts: ['year:' + OpenSpending.year],
            rootNodeLabel: 'Total',
            breakdown: 'Subcategory',
+           measure: "amount2",
            callback: function(data) {
 
             $('#content-wrap').show();
