--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ yepnope({
            cuts: ['year:' + OpenSpending.year],
            rootNodeLabel: 'Total',
            breakdown: 'Subcategory',
-           measure: "amount2",
+           measure: "amount",
            callback: function(data) {
 
             $('#content-wrap').show();
