--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ yepnope({
            drilldowns: ['Category', 'Subcategory'],
            cuts: ['year:' + OpenSpending.year],
            rootNodeLabel: 'Total',
+           measure: 'amount',
            breakdown: 'Subcategory',
            callback: function(data) {
 
