--- a/bubbletree-map.html
+++ b/bubbletree-map.html
@@ -115,6 +115,7 @@ title: Country & Regional Analysis
 				cuts: ['year:'+year],
 				rootNodeLabel: 'Grand Total ('+year+')', 
 				breakdown: 'region',
+				measure: 'amount2',
 				callback: function(data) {
 					
 					$('#preloader').remove();
