--- a/bubbletree.html
+++ b/bubbletree.html
@@ -57,7 +57,7 @@ title: 使途別予算額
         drilldowns: ['Category', 'Subcategory'],
         cuts: ['year:' + OpenSpending.year],
         breakdown: 'Subcategory',
-        measure: 'amount2',
+        //measure: 'amount2',
         callback: dataLoaded
       });
     });
