--- a/team.html
+++ b/team.html
@@ -10,6 +10,19 @@ title: Team
     }
 </style>
 
+<h2 class="page-header">津市版サイトを立ち上げた人</h2>
+
+<div class="row credits">
+  <div class="span8 offset4">
+
+<ul>
+<li>深堀　巧(Takumi Fukahori), <a href=""></a></li>
+</ul>
+
+</div>
+</div>
+
+
 <h2 class="page-header">Core Team</h2>
 
 <div class="row credits">
