一般財源充当額をセット

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ yepnope({
        new OpenSpending.Aggregator({
            apiUrl: 'http://openspending.org/api',
            //localApiCache: 'aggregate.json',
-           dataset: OpenSpending.identifier,
+           dataset: OpenSpending.identifieri,
            drilldowns: ['Category', 'Subcategory'],
            cuts: ['year:' + OpenSpending.year],
            rootNodeLabel: 'Total',
