--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@ title: Team
   <div class="span8 offset4">
 
 <ul>
-<li>深堀　巧(Takumi Fukahori), <a href=""></a></li>
+<li>深堀　巧(Takumi Fukahori), <a href="https://www.facebook.com/takopom">Facebook</a></li>
 </ul>
 
 </div>
